nextcloud/mariadb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb 
  serviceName: mariadb    
  template:
    metadata:
      labels:
        app: mariadb
      annotations:
        backup.velero.io/backup-volumes: mariadb-data 
    spec:
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-pvc
      containers:
      - name: mariadb 
        image: mariadb:10.5
        ports:
          - containerPort: 3306 
#        args:
#          - --transaction-isolation=READ-COMMITTED
#          - --binlog-format=ROW
#          - --max-connections=1000
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
