nextcloud/nextcloud-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nextcloud.zhora.online`)
      kind: Rule
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: local-zhora-online-tls
